--- a/.env
+++ b/.env
@@ -1,3 +1,6 @@
+# some bullshit
+AIRFLOW_GPL_UNIDECODE=yes
+
 ########################################
 # postgres
 ########################################
