--- a/docker-compose-inspectiv.yml
+++ b/docker-compose-inspectiv.yml
@@ -13,7 +13,7 @@ services:
     env_file:
       - .env
   airflow-scheduler:
-    image: docker.io/bitnami/airflow-scheduler:1.10.15
+    image: docker.io/bitnami/airflow-scheduler:2
     env_file:
       - .env
     volumes:
@@ -21,7 +21,7 @@ services:
       - ${CUSTOM_DAGS_DIR}:/opt/bitnami/airflow/dags
       - ${CUSTOM_REQUIREMENTS}:/bitnami/python/requirements.txt
   airflow-worker:
-    image: docker.io/bitnami/airflow-worker:1.10.15
+    image: docker.io/bitnami/airflow-worker:2
     env_file:
       - .env
     volumes:
@@ -29,7 +29,7 @@ services:
       - ${CUSTOM_DAGS_DIR}:/opt/bitnami/airflow/dags
       - ${CUSTOM_REQUIREMENTS}:/bitnami/python/requirements.txt
   airflow:
-    image: docker.io/bitnami/airflow:1.10.15
+    image: docker.io/bitnami/airflow:2
     env_file:
       - .env
     ports:
@@ -49,3 +49,7 @@ volumes:
     driver: local
   redis_data:
     driver: local
+networks:
+  default:
+    external:
+      name: isio
